# port

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: README.md  plan.md
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out/diff/: src__app.rs_line_105_col_9.diff  src__app.rs_line_120_col_9.diff  src__app.rs_line_37_col_2_001.diff  src__app.rs_line_48_col_9_001.diff  src__app.rs_line_57_col_25.diff  src__app.rs_line_58_col_25_001.diff  src__app.rs_line_67_col_9_001.diff  src__app.rs_line_72_col_12_001.diff  src__app.rs_line_72_col_38_001.diff  src__app.rs_line_72_col_55.diff  src__app.rs_line_72_col_55_004.diff  src__app.rs_line_72_col_55_005.diff  src__app.rs_line_72_col_77_001.diff  src__app.rs_line_72_col_77_002.diff  src__app.rs_line_72_col_9.diff  src__app.rs_line_73_col_27.diff  src__app.rs_line_73_col_27_003.diff  src__app.rs_line_78_col_26.diff  src__app.rs_line_78_col_26_001.diff  src__app.rs_line_78_col_26_005.diff  src__app.rs_line_78_col_9_001.diff  src__app.rs_line_79_col_27.diff  src__app.rs_line_79_col_27_001.diff  src__app.rs_line_84_col_9.diff  src__app.rs_line_90_col_9_001.diff  src__app.rs_line_94_col_9_001.diff  src__events.rs_line_18_col_5.diff  src__events.rs_line_18_col_5_001.diff  src__events.rs_line_26_col_5.diff  src__events.rs_line_26_col_5_003.diff  src__events.rs_line_27_col_9_001.diff  src__events.rs_line_31_col_31.diff  (+96 more)
scripts/: install.sh
src/: app.rs  events.rs  filter.rs  lib.rs  main.rs  ports.rs  process.rs  ui.rs
